# rag

./: .env  .env.example  .gitignore  .jscpd.json  AGENTS.md  Dockerfile  README.md  docker-compose.db.rag.yml  docker-compose.db.yml  docker-compose.yml  eval_result.json  mani.yaml  pyproject.toml  skills-lock.json  start.sh  test_db_connection.py  test_pool_connection.py
.agents/skills/ant-design-vue/: SKILL.md
.agents/skills/chunking-strategies/: SKILL.md
.agents/skills/chunking-strategy/: SKILL.md
.agents/skills/clean-architecture/: RE.md  README.md  SKILL.md
.agents/skills/design-principles/: SKILL.md
.agents/skills/rag-chunk-advisor/: SKILL.md
.agents/skills/rag-chunk-quality-check/: SKILL.md
.agents/skills/rag-golden-testset/: SKILL.md  todo.md
.agents/skills/rag-retrieval-eval/: SKILL.md
.agents/skills/ui-ux-pro-max/: SKILL.md
.claude/evals/: rag-qa.md
.trae/skills/golden-from-doc/: SKILL.md
.trae/skills/retrieval-miss-analysis/: SKILL.md
openspec/changes/active-project-profile/: proposal.md
openspec/changes/add-embed-model-config/: design.md  proposal.md  tasks.md
openspec/changes/add-user-system/: design.md  proposal.md
openspec/changes/async-retrieval-with-latency-split/: design.md  proposal.md  tasks.md
openspec/changes/batch-process-concurrency/: design.md  proposal.md  tasks.md
openspec/changes/golden-dataset-crud/: design.md  proposal.md  tasks.md
openspec/changes/golden-dataset-import/: design.md  proposal.md  tasks.md
openspec/changes/golden-generation-sse/: design.md  proposal.md  tasks.md
openspec/changes/golden-rerank/: design.md  proposal.md  tasks.md
openspec/changes/llm-golden-dataset-generation/: design.md
openspec/changes/project-evaluation-stats/: design.md  proposal.md  tasks.md
openspec/specs/active-project-profile/: spec.md
openspec/specs/active-project-ui/: spec.md
openspec/specs/chunk-golden-records/: spec.md
openspec/specs/chunk-search/: spec.md
scripts/: check_chunks.py  chunks_export.json  diag_bm25.py  export_chunks.py  extract-vue-sfc.mjs  match_golden_testset.py  migrate.sh  ssh-tunnel.sh  start-rag.sh  test_bm25.py  test_tokenize.py
src/rag/: __main__.py
tests/: test_route_lint.py
(+350 files in other folders)
